--- a/src/app/Componants/admin/management-of-organs/management-of-organs.component.html
+++ b/src/app/Componants/admin/management-of-organs/management-of-organs.component.html
@@ -28,12 +28,11 @@
                         <div class="card-footer ">
                             <div class="d-flex justify-content-center">
                                 <button class="btn btn-primary me-2 " data-bs-toggle="modal" data-bs-target="#organ3d" (click)="setSelectedOrgan(organ.id)">View in 3D</button>
+                                <button class="btn btn-success me-2"> Edit </button>
+                                <button class="btn btn-danger me-2" (click)="deleteOrgan(this.organ.id)"> Delete </button>
 
-                                <div class="dropdown d-inline">
-                                    <button class="btn btn-outline-dark" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <i class="bi bi-three-dots"></i>
-                                    </button>
-                                </div>
+
+
                             </div>
                         </div>
 
@@ -48,24 +47,23 @@
 
 
 <div class="modal fade" id="organ3d" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-        <div class="modal-content ">
+    <div class="modal-dialog modal-dialog-centered modal-lg " style="height: 75vh;" role="document">
+        <div class="modal-content  " >
             <div class="modal-header">
                 <h5 class="modal-title " id="exampleModalLongTitle">View the {{this.selectedRow?.name}} in 3D </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
 
                 </button>
             </div>
-            <div   class="modal-body text-center bg-black">
-                <model-viewer alt="Neil Armstrong's Spacesuit from the Smithsonian Digitization Programs Office and National Air and Space Museum" src="{{this.url+this.selectedRow?.data}}"   class="w-100 " shadow-intensity="2" camera-controls touch-action="pan-y"></model-viewer>
-            </div>
-            <!--
-            <div class="modal-footer d-flex justify-content-center">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-danger"  data-bs-dismiss="modal"  >Yes </button>
-            </div>
-            -->
+            <div   class="modal-body text-center  " style="  background: linear-gradient(to bottom, #cccccc, #130d0d);">
+              <model-viewer *ngIf="!isLoading" [src]="modelBlobURL"  style="height: 75vh;" class="w-100" shadow-intensity="2" camera-controls touch-action="pan-y"></model-viewer>
+
+                <div  *ngIf="isLoading" class="spinner-border text-warning" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+
         </div>
     </div>
 </div>
 
+</div>
