--- a/src/app/Componants/admin/management-of-organs/management-of-organs.component.html
+++ b/src/app/Componants/admin/management-of-organs/management-of-organs.component.html
@@ -1,48 +1,75 @@
 <div class="parent-container" >
 
-        <div class="container ">
-            <div class="row justify-content-end my-5 ">
-                    <form class="d-flex col-6">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-warning" type="submit">Search</button>
-                    </form>
-
+    <div class="container">
+        <div class="row justify-content-between my-5">
+            <div class="col-auto">
+                <button class="btn btn-warning rounded-5 "  data-bs-toggle="modal" data-bs-target="#addModal" >
+                    Add a new  human organ
+                </button>
+            </div>
+            <div class="col-auto">
+                <form class="d-flex">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-warning rounded-5" type="submit">Search</button>
+                </form>
             </div>
         </div>
+    </div>
 
         <div class="container">
         <div class="row row-cols-1 row-cols-md-3 g-4 " >
 
             <div class="col"  *ngFor="let organ of organs">
+
                 <div class="card d-flex h-100">
                     <div class="row g-0">
                         <div class="col-6">
-                            <img src="{{ this.url + organ.image }}" class="card-img-top w-100" alt="...">
+                            <img src="{{ this.url + organ.image }}" class="card-img-top w-100 h-100" alt="...">
                         </div>
                         <div class="col-6">
                             <div class="card-body">
-                                <h5 class="card-title ">{{ organ.name }}</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                                <h5 class="card-title ">{{ organ.name }} </h5>
+                                <p class="card-text ">{{organ.description}}</p>
+
                             </div>
                         </div>
                         <div class="card-footer ">
                             <div class="d-flex justify-content-center">
                                 <button class="btn btn-primary me-2 " data-bs-toggle="modal" data-bs-target="#organ3d" (click)="setSelectedOrgan(organ.id)">View in 3D</button>
                                 <button class="btn btn-success me-2"> Edit </button>
-                                <button class="btn btn-danger me-2" (click)="deleteOrgan(this.organ.id)"> Delete </button>
-
-
-
+                                <button class="btn btn-danger me-2"  data-bs-toggle="modal" data-bs-target="#deleteModalCenter" (click)="setOrgan(organ.id)"> Delete </button>
                             </div>
                         </div>
 
                     </div>
                 </div>
 
+                <div class="modal fade" id="deleteModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" >   Delete</h5>
+                                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body text-center">
+                                Would you like to delete the {{this.selectedRow?.name}}
+                            </div>
+                            <div class="modal-footer d-flex justify-content-center">
+                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">NO</button>
+                                <button type="button" class="btn btn-danger" (click)="deleteOrgan()" data-bs-dismiss="modal">Yes</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
+
         </div>
     </div>
 </div>
+
 
 
 
@@ -66,4 +93,62 @@
     </div>
 </div>
 
+</div>
+
+<div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-center " > Add a new Organ </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <div class="card-body px-4 py-3 px-md-5">
+                    <form  class="d-flex flex-column gap-1" [formGroup]="addForm" (ngSubmit)="addOrgan()">
+
+                        <!-- Name input -->
+                        <div class="form-outline">
+                            <label class="form-label" for="name">Name</label>
+                            <input type="text" id="name" formControlName="name" class="form-control" />
+                        </div>
+
+
+                        <div class="form-outline  scrollable-input">
+                            <label class="form-label" for="desc">Description</label>
+                            <textarea id="desc" formControlName="description" class="form-control"></textarea>
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend w-50">
+                                <label class="input-group-text" for="inputGroupSelect01">Select one category</label>
+                            </div>
+                            <select class="custom-select w-50" id="inputGroupSelect01" formControlName="categorie">
+                                <option value="" disabled selected>Select a category</option>
+                                <option [value]="category.id" *ngFor="let category of categories">{{ category.name }}</option>
+                            </select>
+                        </div>
+
+                        <div class="form-outline d-flex flex-row gap-3 justify-content-center">
+                            <div class="d-flex flex-column align-items-center">
+                                <input type="file" id="glb"  (change)="onGblLoad($event)" accept=".glb" style="display: none" required >
+                                <button type="button" class="custom-file-button btn btn-primary"  onclick="document.getElementById('glb').click()">upload a 3D model </button>
+                            </div>
+                            <div class="d-flex flex-column align-items-center">
+                                <input type="file" id="im"  (change)="OnImgLoad($event)" accept="image/*" style="display: none" required>
+                                <button type="button" class="custom-file-button btn btn-primary " onclick="document.getElementById('im').click()">upload an image </button>
+                            </div>
+                        </div>
+
+                        <div class="modal-footer d-flex justify-content-center">
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal"  >Close</button>
+                            <button type="submit" class="btn btn-success "  data-bs-dismiss="modal"  >Confirm </button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </div>
 </div>
