--- a/src/app/Componants/admin/management-of-organs/management-of-organs.component.html
+++ b/src/app/Componants/admin/management-of-organs/management-of-organs.component.html
@@ -36,7 +36,7 @@
                         <div class="card-footer ">
                             <div class="d-flex justify-content-center">
                                 <button class="btn btn-primary me-2 " data-bs-toggle="modal" data-bs-target="#organ3d" (click)="setSelectedOrgan(organ.id)">View in 3D</button>
-                                <button class="btn btn-success me-2"> Edit </button>
+                                <button class="btn btn-success me-2"  data-bs-toggle="modal" data-bs-target="#editOrgan" (click)="ShowModalEdit(organ.id)"> Edit </button>
                                 <button class="btn btn-danger me-2"  data-bs-toggle="modal" data-bs-target="#deleteModalCenter" (click)="setOrgan(organ.id)"> Delete </button>
                             </div>
                         </div>
@@ -137,6 +137,83 @@
                             <div class="d-flex flex-column align-items-center">
                                 <input type="file" id="im"  (change)="OnImgLoad($event)" accept="image/*" style="display: none" required>
                                 <button type="button" class="custom-file-button btn btn-primary " onclick="document.getElementById('im').click()">upload an image </button>
+                            </div>
+                        </div>
+
+                        <div class="modal-footer d-flex justify-content-center">
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal"  >Close</button>
+                            <button type="submit" class="btn btn-success "  data-bs-dismiss="modal"  >Confirm </button>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<div class="modal fade " id="editOrgan" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"  aria-hidden="true">
+    <div class="modal-dialog modal-dialog-lg" role="document">
+        <div class="modal-content overflow-y-scroll">
+            <div class="modal-header">
+                <h5 class="modal-title text-center " > Edit the {{selectedRow?.name}}   </h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                </button>
+            </div>
+            <div class="modal-body text-center">
+                <div class="card-body px-4 py-3 px-md-5">
+                    <form  class="d-flex flex-column gap-1" [formGroup]="editForm" (ngSubmit)="editOrgan()">
+
+                        <!-- Name input -->
+                        <div class="d-flex flex-row gap-3">
+                            <div class="form-inline">
+                                <label class="form-label fw-bold" for="name">ID</label>
+                                <input type="text" id="organName" formControlName="id" class="form-control "  readonly/>
+                            </div>
+                            <div class="form-inline">
+                                <label class="form-label fw-bold" for="name">Name</label>
+                                <input type="text" id="categorie" formControlName="name" class="form-control" />
+                            </div>
+                        </div>
+
+
+                        <div class="input-group my-3">
+                            <div class="input-group-prepend w-50">
+                                <label class="input-group-text" for="inputGroupSelect02">Select one category</label>
+                            </div>
+                            <select class="custom-select w-50" id="inputGroupSelect02" formControlName="categorie">
+                                <option value="{{selectedRow?.categorie.id}}"  selected> {{selectedRow?.categorie.name}}</option>
+                                <option [value]="category.id" *ngFor="let category of categories">{{ category.name }}</option>
+                            </select>
+                        </div>
+
+
+                        <div class="form-inline  scrollable-input my-3">
+                            <label class="form-label text-start fw-bold" for="description">Description</label>
+                            <textarea id="description" formControlName="description" class="form-control"></textarea>
+                        </div>
+
+
+                        <div class="form-outline d-flex flex-row gap-3 justify-content-center">
+
+                            <div class="form-outline">
+                                <label class="form-label fw-bold" for="image">Image</label>
+                                <div class="d-flex flex-column align-items-center">
+                                    <img id="image" [src]="this.url+selectedRow?.image" style="height: 23vh;" class="  my-2" >
+                                    <input type="file" id="fileInput" (change)="OnImgLoad($event)" accept=".gbl" style="display: none">
+                                    <button type="button" class="custom-file-button btn btn-warning"  onclick="document.getElementById('fileInput').click()">change the image </button>
+                                </div>
+                            </div>
+                            <div class="form-outline">
+                                <label class="form-label fw-bold" for="image">3D Model </label>
+                                <div class="d-flex flex-column align-items-center">
+                                    <model-viewer *ngIf="!isLoading" [src]="modelBlobURL"  style="height: 25vh;" class="w-100" shadow-intensity="2" camera-controls touch-action="pan-y"></model-viewer>
+                                    <div  *ngIf="isLoading" style="height: 25vh;" role="status">
+                                        <span class="text-center">Loading...</span>
+                                    </div>
+                                    <input type="file" id="3D" (change)="OnImgLoad($event)" accept=".gbl" style="display: none">
+                                    <button type="button" class="custom-file-button btn btn-warning"  onclick="document.getElementById('3D').click()">change the model </button>
+                                </div>
                             </div>
                         </div>
 
