start working on dashboard

--- a/src/app/Componants/admin/home/home.component.css
+++ b/src/app/Componants/admin/home/home.component.css
@@ -1,8 +1,11 @@
-.admin{
-    background: rgba(251,251,251,0.5);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-
-
-
+.parent {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
 }
+
+.div1 { grid-area: 1 / 2 / 2 / 3; }
+.div2 { grid-area: 1 / 4 / 2 / 5; }
+.div3 { grid-area: 2 / 2 / 6 / 5; }
